# MLOps-Bootcamp-Hotel-Reservations

./: .gitignore  Dockerfile  Jenkinsfile  application.py  compose.yml  docker-compose.yml  pyproject.toml
config/: base_config.py  config.yml  model_params.py  paths.py
custom_jenkins/: Dockerfile
pipeline/: training_pipeline.py
src/: __init__.py  data_ingestion.py  data_preprocessing.py  logger.py  model_training.py
src/utils/: common.py
static/: script.js  style.css
templates/: index.html
tests/: test_logger.py
